--- a/sakai/pom.xml
+++ b/sakai/pom.xml
@@ -13,7 +13,7 @@
   </version>
   <properties>
     <sakairsf.sakai.version>2.2.x</sakairsf.sakai.version>
-    <rsfutil.version>0.7.1</rsfutil.version>
+    <rsfutil.version>0.7.2M5-SNAPSHOT</rsfutil.version>
   </properties>
   <modules>
     <module>../../SakaiRSF</module> 
