--- a/standard-war/pom.xml
+++ b/standard-war/pom.xml
@@ -7,9 +7,9 @@
   <artifactId>standard-war</artifactId>
   <packaging>pom</packaging>
   <name>Standard WAR base POM</name>
-  <version>POM-2</version>
+  <version>POM-3</version>
   <description>
-   A base POM holding common definitions suitable for a WAR project
+    A base POM holding common definitions suitable for a WAR project
   </description>
   <distributionManagement>
     <repository>
@@ -18,7 +18,7 @@
       <url>scp://catnep.caret.cam.ac.uk/home/www2/htdocs/maven2dev</url>
     </repository>
   </distributionManagement>
-   <!-- maven repositories -->
+  <!-- maven repositories -->
   <repositories>
     <repository>
       <id>Sakaiproject-Maven2</id>
@@ -39,6 +39,13 @@
       </snapshots>
     </repository>
   </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>CARET-Maven2</id>
+      <name>CARET Maven 2 Repository</name>
+      <url>http://www2.caret.cam.ac.uk/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <sourceDirectory>src/java</sourceDirectory>
     <resources>
@@ -63,6 +70,10 @@
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-rsf-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
