--- a/sakai-rsf/pom.xml
+++ b/sakai-rsf/pom.xml
@@ -13,7 +13,7 @@
   </version>
   <properties>
     <sakairsf.sakai.version>2.2.x</sakairsf.sakai.version>
-    <rsfutil.version>0.7.2M5-SNAPSHOT</rsfutil.version>
+    <rsfutil.version>0.7.2RC1</rsfutil.version>
   </properties>
   <modules>
     <module>../core</module> 
