Added PluginRepositories to more parents

--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,14 @@
     <module>standard-jar</module>
     <module>standard-war</module>
   </modules>
+
+  <distributionManagement>
+    <repository>
+      <id>CARET-Maven2-dev</id>
+      <name>CARET Maven 2 Dev repository</name>
+      <url>
+        scp://amb26@catnep.caret.cam.ac.uk/home/www2/htdocs/maven2dev
+      </url>
+    </repository>
+  </distributionManagement>
 </project>
