Added maven2-war parent for newer projects using standard Maven 2 layout

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>master</module>
     <module>standard-jar</module>
     <module>standard-war</module>
+    <module>standard-maven2-war</module>
   </modules>
 
   <distributionManagement>
