--- a/standard-war/pom.xml
+++ b/standard-war/pom.xml
@@ -74,6 +74,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-rsf-plugin</artifactId>
+        <version>1.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
