--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,7 +8,7 @@
   <groupId>uk.org.ponder.pure-poms</groupId>
   <artifactId>core-rsf-builder</artifactId>
   <properties>
-    <rsfutil.version>0.7.2</rsfutil.version>
+    <rsfutil.version>0.7.3M1-SNAPSHOT</rsfutil.version>
   </properties>
   <parent>
     <artifactId>rsf-master-pom</artifactId>
