--- a/standard-sakai-tool/pom.xml
+++ b/standard-sakai-tool/pom.xml
@@ -7,11 +7,11 @@
   <artifactId>standard-sakai-tool</artifactId>
   <packaging>pom</packaging>
   <name>Standard Sakai Tool base POM</name>
-  <version>SNAPSHOT</version>
+  <version>0.8.0-SNAPSHOT</version>
   <parent>
     <artifactId>master</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>SNAPSHOT</version>
+    <version>2.10-SNAPSHOT</version>
   </parent>
   <description>
     A base POM holding common definitions suitable for a Sakai Tool WAR
@@ -67,7 +67,7 @@
       <plugin>
         <groupId>org.sakaiproject.maven.plugins</groupId>
         <artifactId>sakai</artifactId>
-        <version>SNAPSHOT</version>
+        <version>1.4.0</version>
         <configuration>
           <deployDirectory>${sakai.appserver.home}</deployDirectory>
         </configuration>
