--- a/standard-maven2-war/pom.xml
+++ b/standard-maven2-war/pom.xml
@@ -6,13 +6,12 @@
   <parent>
     <groupId>uk.org.ponder.pure-poms</groupId>
     <artifactId>standard-war</artifactId>
-    <version>POM-3</version>
+    <version>POM-4-SNAPSHOT</version>
   </parent>
   <groupId>uk.org.ponder.pure-poms</groupId>
   <artifactId>standard-maven2-war</artifactId>
   <packaging>pom</packaging>
   <name>Standard Maven 2 WAR base POM</name>
-  <version>POM-3</version>
   <description>
     A base POM holding common definitions suitable for a WAR project, using
     Maven 2 standard layout
