--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                      http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                        http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
       <groupId>org.sonatype.oss</groupId>
@@ -13,7 +10,7 @@
   <name>RSF Core POM Builder</name>
   <groupId>uk.org.ponder.pure-poms</groupId>
   <artifactId>core-pom-builder</artifactId>
-  <version>POM-4-SNAPSHOT</version>
+  <version>POM-4</version>
   <packaging>pom</packaging>
   <modules>
     <module>master</module>
