--- a/master/pom.xml
+++ b/master/pom.xml
@@ -27,14 +27,19 @@
     </dependency>
   </dependencies>
   <build>
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <configuration>
-        <forkMode>never</forkMode>
-      </configuration>
-    </plugin>
-    </plugins>
-   </build>
+	  <plugins>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-release-plugin</artifactId>
+			  <version>2.5</version>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <configuration>
+				  <forkMode>never</forkMode>
+			  </configuration>
+		  </plugin>
+	  </plugins>
+  </build>
 </project>
