--- a/standard-war/pom.xml
+++ b/standard-war/pom.xml
@@ -35,6 +35,11 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
           <warSourceDirectory>src/webapp</warSourceDirectory>
