--- a/standard-jar/pom.xml
+++ b/standard-jar/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.org.ponder.pure-poms</groupId>
   <artifactId>standard-jar</artifactId>
-  <version>POM-5-SNAPSHOT</version>
+  <version>POM-5</version>
   <packaging>pom</packaging>
   <name>Standard JAR base POM</name>
 
